crates/tsuno-driver/tests/fixtures/verify_cli/fail/rejects_inv_not_at_loop_start.rs
//@ verify
fn bad_loop(mut x: i32) {
    while x < 3 {
        x = x + 1;
        //@ inv "{x} <= 3"
        break;
    }
}

fn main() {}
